--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,17 +1,29 @@
-<ul>
-  <% @rentals.each do |rental| %>
-   <%#= cl_image_tag rental.shoe.photo.key, height: 300, width: 400, crop: :fill %>
-  <li>Start: <%= rental.start_date %></li>
-  <li>End: <%=  rental.end_date %></li>
-  <li>Shoe's name: <%= rental.shoe.name %></li>
-  <li>Shoe's color: <%= rental.shoe.color %></li>
-  <li>Shoe's price: <%= rental.shoe.price %>¥</li>
-  <li>Shoe's size: <%= rental.shoe.size %></li>
-  <li>Owner's name: <%= rental.shoe.user.name %></li>
-  <li>Owner's email: <%= rental.shoe.user.email %></li>
-  <br>
-<% end %>
-</ul>
+
+<div class="container">
+  <div class="cards">
+    <% @rentals.each do |rental| %>
+      <div class="card-trip">
+      <% if rental.shoe.photo.attached? %>
+        <%= cl_image_tag rental.shoe.photo.key, height: 300, width: 400, crop: :fill %>
+        <% else %>
+          <p>no photo</p>
+        <% end %>
+        <h2 class="shoe-size">size: <%= rental.shoe.size %></h2>
+        <div class="card-trip-infos">
+          <h1><%= rental.shoe.name %></h1>
+          <div class="card-price">
+            <h2 class="card-trip-pricing">price: $<%= rental.shoe.price %></h2>
+            <h2 class="card-trip-start-date">start: <%= rental.start_date %></h2>
+            <h2 class="card-trip-end-date">end: <%= rental.end_date %></h2>
+            <h2 class="card-trip-owner-name">Owner's name: <%= rental.shoe.user.name %></h2>
+            <h2 class="card-trip-owner-email">Owner's email: <%= rental.shoe.user.email %></h2>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
 
 <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
   Back<i class="fas fa-shoe-prints"></i>
