--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,16 +1,30 @@
 <div class="container p-3">
-  <div class="cards">
-    <%= cl_image_tag @shoe.photo.key, height: 300, width: 400, crop: :fill %>
-    <div class="d">
-      <h1><%= @shoe.name %></h1>
-      <h1><%= @shoe.category %></h1>
-      <h1><%= @shoe.size %></h1>
-      <h1><%= @shoe.color %></h1>
+  <div class="row">
+    <div class="col-6">
+      <%= cl_image_tag @shoe.photo.key, height: 300, width: 400, crop: :fill %>
     </div>
-    <%= simple_form_for [ @shoe, @rental ] do |f| %>
-      <%= f.input :start_date, html5: true %>
-      <%= f.input :end_date, html5: true %>
-      <%= f.submit class: 'btn btn-primary'%>
-    <% end %>
+    <div class="col-6">
+      <h1 clas="font-weight-bold"><%= @shoe.name %></h1>
+      <div class="shoe-detail">
+        <p>category: </p>
+        <p><%= @shoe.category %></p>
+      </div>
+      <div class="shoe-detail">
+        <p>size: </p>
+        <p><%= @shoe.size %></p>
+      </div>
+      <div class="shoe-detail">
+        <p>color: </p>
+        <p><%= @shoe.color %></p>
+      </div>
+      <%= simple_form_for [ @shoe, @rental ] do |f| %>
+        <%= f.input :start_date, html5: true %>
+        <%= f.input :end_date, html5: true %>
+        <%= f.submit class: 'btn btn-primary'%>
+      <% end %>
+    </div>
   </div>
+  <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
+    Back<i class="fas fa-shoe-prints"></i>
+  <% end %>
 </div>
