navbar fixed and landingpasge also fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2017/02/12/16/46/shoes-2060519_1280.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2017/02/12/16/46/shoes-2060519_1280.jpg); flex-grow: 1;">
   <div class="container">
     <h1>Find your shoes!</h1>
-    <p>you find out everything what you want</p>
-    <%= link_to "All shoes", shoes_path, class: "btn-light text-decoration-none" %>
+    <p>The fabulous shoes bring you somewhere cool</p>
+    <%= link_to "All shoes are here", shoes_path, class: "btn-light btn-lg text-decoration-none" %>
   </div>
 </div>
