--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body>
+  <body style="min-height: 100vh; display: flex; flex-direction: column">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%# Added from Devise setup %>
