--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -3,7 +3,8 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding: 10px;
-  margin: 10px;
+  margin: 30px;
+  border-radius: 5px;
 }
 
 .card-trip > img {
@@ -19,6 +20,7 @@
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  color: black;
 }
 
 .card-trip p {
@@ -35,6 +37,7 @@
   align-items: center;
   position: relative;
   justify-content: center;
+  color: black;
 }
 
 .card-trip-infos .card-trip-user {
