--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <link rel="apple-touch-icon"  href="favicon.ico">
+  <link rel="icon" type="image/png"  href="favicon.ico">
     <title>ShoesRbnb</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
