landing pages texts are in the center

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
   <div class="container">
     <h1>Find your shoes!</h1>
     <p>The fabulous shoes bring you somewhere cool</p>
-    <%= link_to "All shoes are here", shoes_path, class: "btn-light btn-lg text-decoration-none" %>
+    <%= link_to "All shoes are here", shoes_path, class: "btn-light btn-lg text-decoration-none m-5" %>
   </div>
 </div>
