change button style

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -13,7 +13,7 @@ h1{
 .shoe-detail{
   border-radius: 5px;
   padding: 5px 25px;
-  background-color: #dad7cd;;
+  background-color: #d8f3dc;;
   text-align: center;
 }
 
