--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,19 +3,17 @@
     <%= link_to shoes_path, class: "navbar-brand" do %>
       <%= image_tag "shoe-logo.png" %>
     <% end %>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "My bookings", rentals_path, class: "btn btn-info me-3" %>
+            <%= link_to "My bookings", rentals_path, class: "btn btn-outline-success btn-rounded me-3" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Post your shoes", new_shoe_path, class: "btn btn-info me-3" %>
+            <%= link_to "Post your shoes", new_shoe_path, class: "btn btn-outline-success btn-rounded me-3" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://randomuser.me/api/portraits/lego/6.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
