--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,9 +1,7 @@
 <div class="container p-4">
   <div class="row">
-
     <div class="col-7">
       <%= cl_image_tag @shoe.photo.key, height: 350, width: 500, crop: :fill %>
-
     </div>
     <div class="col-5">
       <div class="shoe-container">
@@ -25,7 +23,7 @@
         <%= simple_form_for [ @shoe, @rental ] do |f| %>
           <%= f.input :start_date, html5: true %>
           <%= f.input :end_date, html5: true %>
-          <%= f.submit class: 'btn btn-outline-secondary btn-lg'%>
+          <%= f.submit class: 'btn btn-outline-success btn-lg'%>
         <% end %>
       </div>
     </div>
