rental back button is now in the center

--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -22,9 +22,7 @@
       </div>
     <% end %>
   </div>
+  <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
+  Back<i class="fas fa-shoe-prints text-align-center"></i>
+  <% end %>
 </div>
-
-
-<%= link_to shoes_path, class:"text-decoration-none text-success" do %>
-  Back<i class="fas fa-shoe-prints"></i>
-<% end %>
