--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -13,13 +13,14 @@
 }
 
 .card-trip h1 {
-  font-size: 24px;
+  font-size: 34px;
   font-weight: bold;
+  margin: 3px;
 }
 .card-trip h2 {
-  font-size: 16px;
+  font-size: 19px;
   font-weight: bold;
-  margin: 0;
+  margin: 2px;
   color: black;
 }
 
@@ -31,13 +32,14 @@
 
 
 .card-trip .card-trip-infos {
-  padding: 16px;
+  padding: 7px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   justify-content: center;
   color: black;
+  border: 2px solid #52b788;
 }
 
 .card-trip-infos .card-trip-user {
