--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,7 +1,16 @@
 h1{
   font-family: "PPEiko Bold";
-  text-align: center;
+}
+.shoe-title{
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
   margin-bottom: 20px;
+  border-bottom: 1px solid rgba(40, 50, 52, 0.2);
+}
+.shoe-title p{
+  font-family: "PPEiko Bold";
+  font-size: 20px;
 }
 .shoe-container{
   margin: 0px 30px 30px 0px;
@@ -19,10 +28,10 @@ h1{
 
 p{
   margin-bottom: 0;
-  font-size: 13px;
+  font-size: 14px;
 }
 .shoe-detail-type{
-  font-size: 12px;
+  font-size: 13px;
 }
 
 form{
