--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container p-4">
   <div class="row">
-    <div class="col-7">
+    <div class="col-12 col-lg-7">
       <%= cl_image_tag @shoe.photo.key, height: 350, width: 500, crop: :fill %>
     </div>
-    <div class="col-5">
+    <div class="col-12 col-lg-5">
       <div class="shoe-container">
         <div class="shoe-title">
           <h1 class="font-weight-bold"><%= @shoe.name %></h1>
