--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,7 +1,11 @@
 <div class="container p-4">
   <div class="row">
     <div class="col-12 col-lg-7">
+    <% if @shoe.photo.attached? %>
       <%= cl_image_tag @shoe.photo.key, height: 350, width: 500, crop: :fill %>
+      <% else %>
+      <%= image_tag "shoe-logo.png", class: "shoe-show"%>
+      <% end %>
     </div>
     <div class="col-12 col-lg-5">
       <div class="shoe-container">
