--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -35,7 +35,9 @@
       </div>
     </div>
   </div>
+  <div class="d-flex justify-content-center">
   <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
     Back<i class="fas fa-shoe-prints"></i>
   <% end %>
+  </div>
 </div>
