--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -28,7 +28,7 @@
           </div>
         </div>
         <%= simple_form_for [ @shoe, @rental ] do |f| %>
-          <%= f.input :start_date, html5: true %>
+          <%= f.input :start_date, html5: true, input_html: { min: Date.today }%>
           <%= f.input :end_date, html5: true %>
           <%= f.submit class: 'btn btn-outline-success btn-lg'%>
         <% end %>
