--- a/app/views/owner/rentals/index.html.erb
+++ b/app/views/owner/rentals/index.html.erb
@@ -22,7 +22,9 @@
       </div>
     <% end %>
   </div>
+  <div class="d-flex justify-content-center">
   <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
     Back<i class="fas fa-shoe-prints text-align-center"></i>
   <% end %>
+  </div>
 </div>
