add day to index, show page

--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -11,7 +11,7 @@
       <div class="shoe-container">
         <div class="shoe-title">
           <h1 class="font-weight-bold"><%= @shoe.name %></h1>
-          <p class="font-weight-bold">$<%= @shoe.price %></p>
+          <p class="font-weight-bold">$<%= @shoe.price %>/day</p>
         </div>
         <div class="shoe-details">
           <div class="shoe-detail">
