--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -20,7 +20,7 @@
           <div class="card-trip-infos">
             <h1><%= shoe.name %></h1>
             <div class="card-price">
-              <h2 class="card-trip-pricing">$<%= shoe.price %></h2>
+              <h2 class="card-trip-pricing">$<%= shoe.price %>/day</h2>
             </div>
           </div>
         </div>
