--- a/app/views/shoes/new.html.erb
+++ b/app/views/shoes/new.html.erb
@@ -1,9 +1,15 @@
-<%= simple_form_for @shoe do |f| %>
-  <%= f.input :name %>
-  <%= f.input :color %>
-  <%= f.input :price %>
-  <%= f.input :size %>
-  <%= f.input :category %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col col-sm-10 col-md-6 col-lg-4">
+      <%= simple_form_for @shoe do |f| %>
+        <%= f.input :name, label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' }%>
+        <%= f.input :color, label_html: { style: 'color:#2a9d8f; font-size:large' }%>
+        <%= f.input :price, label: '¥ Price per day', label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' } %>
+        <%= f.input :size, label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' }%>
+        <%= f.input :category, label_html: { style: 'color:#2a9d8f; font-size:large' }%>
+        <%= f.input :photo, as: :file, label_html: { style: 'color:#2a9d8f; font-size:large' } %>
+        <%= f.submit class: "btn btn-outline-success btn-rounded me-3" %>
+      <% end %>
+    </div>
+  </div>
+</div>
