--- a/app/views/owner/rentals/index.html.erb
+++ b/app/views/owner/rentals/index.html.erb
@@ -14,9 +14,8 @@
         <div class="card-trip-infos">
           <h1><%= rental.shoe.name %></h1>
           <div class="card-price">
-            <h2 class="card-trip-pricing">price: $<%= rental.shoe.price %></h2>
-            <h2 class="card-trip-start-date">start: <%= rental.start_date %></h2>
-            <h2 class="card-trip-end-date">end: <%= rental.end_date %></h2>
+            <h2 class="card-trip-pricing"><i class="fas fa-hand-holding-usd"></i> <%= rental.shoe.price %>¥</h2>
+            <h2 class="card-trip-start-date"><i class="far fa-calendar-alt"></i> <%= rental.formatted_start_date %> - <%= rental.formatted_end_date %> </h2>
             <h2 class="card-trip-owner-name">Owner's name: <%= rental.shoe.user.name %></h2>
             <h2 class="card-trip-owner-email">Owner's email: <%= rental.shoe.user.email %></h2>
             <h2 class="card-trip-owner-email">Booking Status: <%= rental.status %></h2>
@@ -31,11 +30,11 @@
           </div>
         </div>
       </div>
-    </div>
+    <% end %>
   </div>
   <div class="d-flex justify-content-center">
-  <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
-    Back<i class="fas fa-shoe-prints text-align-center"></i>
-  <% end %>
+    <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
+      Back<i class="fas fa-shoe-prints text-align-center"></i>
+    <% end %>
   </div>
 </div>
