--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,27 +1,30 @@
 <div class="container">
-  <div class="cards">
-    <% @rentals.each do |rental| %>
-      <div class="card-trip">
-        <% if rental.shoe.photo.attached? %>
-          <%= cl_image_tag rental.shoe.photo.key, height: 300, width: 400, crop: :fill %>
-        <% else %>
-          <p>no photo</p>
-        <% end %>
-        <h2 class="shoe-size">size: <%= rental.shoe.size %></h2>
-        <div class="card-trip-infos">
-          <h1><%= rental.shoe.name %></h1>
-          <div class="card-price">
-            <h2 class="card-trip-pricing">price: $<%= rental.shoe.price * ( rental.end_date - rental.start_date) %></h2>
-            <h2 class="card-trip-start-date">start: <%= rental.start_date %></h2>
-            <h2 class="card-trip-end-date">end: <%= rental.end_date %></h2>
-            <h2 class="card-trip-owner-name">Owner's name: <%= rental.shoe.user.name %></h2>
-            <h2 class="card-trip-owner-email">Owner's email: <%= rental.shoe.user.email %></h2>
-            <h2 class="card-trip-owner-email">Booking Status: <%= rental.status %></h2>
-          </div>
-        </div>
-      </div>
-    <% end %>
+  <ul class="nav tabs-underlined" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+    <p class="nav-link tab-underlined active" id="home-tab" data-bs-toggle="tab" data-bs-target="#Pendings" type="p" role="tab" aria-controls="home" aria-selected="true">Pending</p>
+  </li>
+  <li class="nav-item" role="presentation">
+    <p class="nav-link tab-underlined" id="profile-tab" data-bs-toggle="tab" data-bs-target="#confirmed" type="p" role="tab" aria-controls="profile" aria-selected="false">Confirmed</p>
+  </li>
+  <li class="nav-item" role="presentation">
+    <p class="nav-link tab-underlined" id="contact-tab" data-bs-toggle="tab" data-bs-target="#Declined" type="p" role="tab" aria-controls="contact" aria-selected="false">Declined</p>
+  </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade py-3 show active" id="Pendings" role="tabpanel" aria-labelledby="home-tab">
+      Your booking is waiting for an answer
+      <%= render "rentals/cards", rentals: @pending_rentals %>
+    </div>
+    <div class="tab-pane fade py-3" id="confirmed" role="tabpanel" aria-labelledby="profile-tab">
+      You owes the shoes!
+      <%= render "rentals/cards", rentals: @confirmed_rentals %>
+    </div>
+    <div class="tab-pane fade py-3" id="Declined" role="tabpanel" aria-labelledby="converstion-tab">
+      Maybe next time!
+      <%= render "rentals/cards", rentals: @declined_rentals %>
+    </div>
   </div>
+
   <div class="d-flex justify-content-center">
     <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
       Back<i class="fas fa-shoe-prints text-align-center"></i>
