add search in landing page

--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -1,14 +1,18 @@
 <div class="container">
-  <%= form_tag shoes_path, method: :get, class: 'd-flex m-4' do %>
-    <%= text_field_tag :query,
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <%= form_tag shoes_path, method: :get, class: 'd-flex m-4' do %>
+        <%= text_field_tag :query,
     params[:query],
-    class: "form-control border-radius",
+    class: "form-control border-radius-circle",
     placeholder: "Find perfect shoes by category or color...."
   %>
-    <%= button_tag type:'submit', style: 'border-style:none' do %>
-      <i class="fas fa-search border-style-none"></i>
-    <% end %>
-  <% end %>
+        <%= button_tag type:'submit', style: 'border-style:none' do %>
+          <i class="fas fa-search border-style-none"></i>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
   <div class="cards">
     <% @shoes.each do |shoe| %>
       <%= link_to shoe_path(shoe),class:"text-decoration-none" do %>
