--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,19 @@
     <h1>Find your shoes!</h1>
     <p>The fabulous shoes bring you somewhere cool</p>
     <%= link_to "All shoes are here", shoes_path, class: "btn-light btn-lg text-decoration-none m-5" %>
+    <div class="row justify-content-center">
+      <div class="col-4">
+        <%= form_tag shoes_path, method: :get, class: 'd-flex' do %>
+          <%= text_field_tag :query,
+    params[:query],
+    class: "form-control border-radius",
+    placeholder: "Find perfect shoes!"
+  %>
+          <%= button_tag type:'submit', style: 'border-style:none' do %>
+            <i class="fas fa-search border-style-none"></i>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
