--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -53,6 +53,11 @@
   display: flex;
   flex-direction: column;
 }
+.card-price img{
+  display: flex;
+  flex-direction: row;
+}
+
 .shoe-size{
   text-align: right;
   padding: 10px;
