--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,6 @@
 @import "banner";
 @import "form_legend_clear";
 @import "navbar";
+@import "notification";
 @import "card-trip";
 @import "card_grid";
