--- a/app/views/owner/rentals/index.html.erb
+++ b/app/views/owner/rentals/index.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-  <div>
-    <h1>SOMEONE WANTS THESE SHOES BRAH</h1>
-  </div>
+    <h2>So many people want my shoes!</h2>
   <div class="cards">
     <% @rentals.each do |rental| %>
       <div class="card-trip">
@@ -14,7 +12,7 @@
         <div class="card-trip-infos">
           <h1><%= rental.shoe.name %></h1>
           <div class="card-price">
-            <h2 class="card-trip-pricing"><i class="fas fa-hand-holding-usd"></i> <%= rental.shoe.price %>¥</h2>
+            <h2 class="card-trip-pricing"><i class="fas fa-hand-holding-usd"></i> <%= rental.total_price %> <i class="fas fa-euro-sign"></i></h2>
             <h2 class="card-trip-start-date"><i class="far fa-calendar-alt"></i> <%= rental.formatted_start_date %> - <%= rental.formatted_end_date %> </h2>
             <h2 class="card-trip-owner-name"><i class="fas fa-user"></i> <%= rental.shoe.user.name %></h2>
             <h2 class="card-trip-owner-email"><i class="fas fa-cart-plus"></i> <%= rental.status %></h2>
