--- a/app/views/owner/rentals/index.html.erb
+++ b/app/views/owner/rentals/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>So many people want my shoes!</h2>
+  <h2>So many people want my shoes!</h2>
   <div class="cards">
     <% @rentals.each do |rental| %>
       <div class="card-trip">
@@ -8,9 +8,11 @@
         <% else %>
           <p>no photo</p>
         <% end %>
-        <h2 class="shoe-size">size: <%= rental.shoe.size %></h2>
+        <div class="d-flex justify-content-between align-items-center">
+          <h2><%= rental.shoe.name %></h2>
+          <h2 class="shoe-size">size: <%= rental.shoe.size %></h2>
+        </div>
         <div class="card-trip-infos">
-          <h1><%= rental.shoe.name %></h1>
           <div class="card-price">
             <h2 class="card-trip-pricing"><i class="fas fa-hand-holding-usd"></i> <%= rental.total_price %> <i class="fas fa-euro-sign"></i></h2>
             <h2 class="card-trip-start-date"><i class="far fa-calendar-alt"></i> <%= rental.formatted_start_date %> - <%= rental.formatted_end_date %> </h2>
