--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,18 +1,18 @@
 <div class="container">
   <ul class="nav tabs-underlined" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-    <p class="nav-link tab-underlined active" id="home-tab" data-bs-toggle="tab" data-bs-target="#Pendings" type="p" role="tab" aria-controls="home" aria-selected="true">Pending</p>
-  </li>
-  <li class="nav-item" role="presentation">
-    <p class="nav-link tab-underlined" id="profile-tab" data-bs-toggle="tab" data-bs-target="#confirmed" type="p" role="tab" aria-controls="profile" aria-selected="false">Confirmed</p>
-  </li>
-  <li class="nav-item" role="presentation">
-    <p class="nav-link tab-underlined" id="contact-tab" data-bs-toggle="tab" data-bs-target="#Declined" type="p" role="tab" aria-controls="contact" aria-selected="false">Declined</p>
-  </li>
+      <p class="nav-link tab-underlined active" id="home-tab" data-bs-toggle="tab" data-bs-target="#Pendings" type="p" role="tab" aria-controls="home" aria-selected="true">Pending</p>
+    </li>
+    <li class="nav-item" role="presentation">
+      <p class="nav-link tab-underlined" id="profile-tab" data-bs-toggle="tab" data-bs-target="#confirmed" type="p" role="tab" aria-controls="profile" aria-selected="false">Confirmed</p>
+    </li>
+    <li class="nav-item" role="presentation">
+      <p class="nav-link tab-underlined" id="contact-tab" data-bs-toggle="tab" data-bs-target="#Declined" type="p" role="tab" aria-controls="contact" aria-selected="false">Declined</p>
+    </li>
   </ul>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade py-3 show active" id="Pendings" role="tabpanel" aria-labelledby="home-tab">
-      I am waiting a confirmation
+      Waiting confirmation...
       <%= render "rentals/cards", rentals: @pending_rentals %>
     </div>
     <div class="tab-pane fade py-3" id="confirmed" role="tabpanel" aria-labelledby="profile-tab">
@@ -24,7 +24,6 @@
       <%= render "rentals/cards", rentals: @declined_rentals %>
     </div>
   </div>
-
   <div class="d-flex justify-content-center">
     <%= link_to shoes_path, class:"text-decoration-none text-success" do %>
       Back<i class="fas fa-shoe-prints text-align-center"></i>
