changes confirmation and euro thing

--- a/app/views/owner/rentals/index.html.erb
+++ b/app/views/owner/rentals/index.html.erb
@@ -16,7 +16,7 @@
           <div class="card-price">
             <h2 class="card-trip-pricing"><i class="fas fa-hand-holding-usd"></i> <%= rental.total_price %> <i class="fas fa-euro-sign"></i></h2>
             <h2 class="card-trip-start-date"><i class="far fa-calendar-alt"></i> <%= rental.formatted_start_date %> - <%= rental.formatted_end_date %> </h2>
-            <h2 class="card-trip-owner-name"><i class="fas fa-user"></i> <%= rental.shoe.user.name %></h2>
+            <h2 class="card-trip-owner-name"><i class="fas fa-user"></i> <%= rental.user.name %></h2>
             <h2 class="card-trip-owner-email"><i class="fas fa-cart-plus"></i> <%= rental.status %></h2>
             <div class="d-flex">
               <% if rental.pending? %>
