--- a/app/views/shoes/new.html.erb
+++ b/app/views/shoes/new.html.erb
@@ -4,7 +4,7 @@
       <%= simple_form_for @shoe do |f| %>
         <%= f.input :name, label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' }%>
         <%= f.input :color, label_html: { style: 'color:#2a9d8f; font-size:large' }%>
-        <%= f.input :price, label: '¥ Price per day', label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' } %>
+        <%= f.input :price, label: '€ Price per day', label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' } %>
         <%= f.input :size, label_html: { style: 'color:#2a9d8f; font-size:large; font-weight: bold;' }%>
         <%= f.input :category, label_html: { style: 'color:#2a9d8f; font-size:large' }%>
         <%= f.input :photo, as: :file, label_html: { style: 'color:#2a9d8f; font-size:large' } %>
